syntax = "proto3";

package core;

option go_package = "tubes.sister/raft/gRPC";

service CmdExecutor {
  rpc ExecuteCmd(ExecuteMsg) returns (ExecuteRes) {}
}

message ExecuteMsg {
  string cmd = 1;
  repeated string vals = 2;
}

message ExecuteRes {
  bool success = 1;
}